Fix HTML structure and formatting issues

--- a/Index.html
+++ b/Index.html
@@ -16,8 +16,9 @@
     <hr>
     <img src="./images/photographers.jpg" alt="image for photographer">
     <hr>
-    <p style="margin-left: 50px;">"Every day is a great chance to fight again"</p>
+    <p "Every day is a great chance to fight again"</p>
     <hr>
     <a href="https://www.gettyimages.in/">Click here....</a>
 </body>
+
 </html>
